# brightness-utility

./: CMakeLists.txt  PKGBUILD  README.md
src/: CMakeLists.txt  ddcutil.c  ddcutil.h  main.cpp  main.h  resources.qrc  ui.cpp  ui.h
